--- a/src/app/files/displaybudget/displaybudget.component.html
+++ b/src/app/files/displaybudget/displaybudget.component.html
@@ -10,7 +10,7 @@
     <section class="mx-auto border shadow shadow-lg p-2 border-1 border-success col-1- col-md-8  ">
         <main class="d-flex justify-content-between align-items-center">
             <div>
-                <p class="fw-bold">Budget AMT: <span class="fw-light">#{{budgetInfo}}</span></p>
+                <p class="fw-bold">Budget AMT: <span class="fw-light">#{{budgetInfo.budgetPrice}}</span></p>
                 <p class="fw-bold">Remaining AMT: <span></span></p>
                 <p class="fw-bold">AMT SPENT: <span></span></p>
             </div>
@@ -18,28 +18,38 @@
                 <p class="fw-bold ">Item Purchased: <span></span></p>
                 <p class="fw-bold ">Item Remaining: <span></span></p>
             </div>
-        </main>
+        </main> 
         <main class="d-block d-md-flex  justify-content-between align-items-start p-4 bg-light">
             <div class="w-75 me-4 p-3 bg-white shadow-sm rounded mb-3 bg-dark">
               <h6 class="mb-4 text-center text-success">Create Item List</h6>
-              <form class="mb-4">
+              <form [formGroup]="itemForm" (ngSubmit)="addCart()" class="mb-4">
                 <div class="mb-3">
-                  <label for="name" class="form-label">Item Name</label>
-                  <input type="text" id="name" class="form-control">
+                  <label for="name" class="form-la[bel">Item] Name</label>
+                  <input type="text" id="name" class="form-control" formControlName="name">
+                  <div *ngIf="itemForm.get('name')?.invalid && itemForm.get('name')?.touched" class="text-danger">
+                    Item Name is required and must be at least 3 characters long.
+                  </div>
                 </div>
                 <div class="mb-3">
                   <label for="quantity" class="form-label">Item Quantity</label>
-                  <input type="text" id="quantity" class="form-control">
+                  <input type="text" id="quantity" class="form-control" formControlName="quantity">
+                  <div *ngIf="itemForm.get('quantity')?.invalid && itemForm.get('quantity')?.touched" class="text-danger">
+                    Item Quantity is required and must be a valid number.
+                  </div>
                 </div>
                 <div class="mb-3">
                   <label for="price" class="form-label">Item Price</label>
-                  <input type="text" id="price" class="form-control">
-                </div>
-                
-                <div class="d-flex justify-content-center">
-                    <button type="submit" class="btn btn-success">Add to Cart</button>
+                  <input type="text" id="price" class="form-control" formControlName="price">
+                  <div *ngIf="itemForm.get('price')?.invalid && itemForm.get('price')?.touched" class="text-danger">
+                    Item Price is required and must be a valid number with up to 2 decimal places.
                   </div>
+                </div>
+                <input type="hidden" formControlName="userId">
+                <div class="d-flex justify-content-center">
+                  <button type="submit" class="btn btn-success">Add to Cart</button>
+                </div>
               </form>
+              
             </div>
           
             <div class="w-100 w-md-50 p-3 bg-white  shadow-sm rounded">
