--- a/src/app/files/displaybudget/displaybudget.component.css
+++ b/src/app/files/displaybudget/displaybudget.component.css
@@ -49,4 +49,65 @@ body {
   .p-4 {
     padding: 1.5rem;
   }
+  .table-responsive {
+    margin: 20px 0;
+  }
+  
+  .table {
+    width: 100%;
+    margin-bottom: 1rem;
+    text-align: center !important;
+    color: #212529;
+    border-collapse: collapse;
+  }
+  
+  .thead-dark th {
+    background-color: #343a40;
+    color: white;
+    border: 1px solid #dee2e6;
+  }
+  
+  .table th, .table td {
+    padding: 0.75rem;
+    vertical-align: top;
+    border-top: 1px solid #dee2e6;
+  }
+  
+  .table-striped tbody tr:nth-of-type(odd) {
+    background-color: rgba(0, 0, 0, 0.05);
+    
+  }
+  
+  .table-bordered {
+    border: 1px solid #dee2e6;
+  }
+  
+  .table-bordered th,
+  .table-bordered td {
+    border: 1px solid #dee2e6;
+  }
+  
+  .text-center {
+    text-align: center;
+  }
+  
+  .d-flex {
+    display: flex;
+  }
+  
+  .justify-content-center {
+    justify-content: center;
+  }
+  
+  .align-items-center {
+    align-items: center;
+  }
+  
+  .mr-2 {
+    margin-right: 0.5rem;
+  }
+  
+  .mb-0 {
+    margin-bottom: 0;
+  }
   
