--- a/src/app/files/create/create.component.html
+++ b/src/app/files/create/create.component.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <title>Document</title>
 </head>
-<body class="d-flex justify-content-center align-items-center mt-5 "> 
+<body class="d-flex justify-content-center align-items-center "> 
     <main class="col-10 col-md-6 text-center shadow shadow-lg border border-2 border-success p-2 mt-5 rounded rounded-2">
         <div class="text-end">
           <button class="btn btn-success" routerLink="/Home">Back</button>
