--- a/src/app/files/home/home.component.html
+++ b/src/app/files/home/home.component.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js">
     <title>Document</title>
 </head>
 <body class=" d-flex justify-content-center align-items-center">
    <section class="container d-flex justify-content-center mt-5 align-items-center">
 
-       <main class="mx-auto text-center shadow shadow-lg rounded  col-8 col-md-5 mt-5 border border-2 border-success  glo">
+       <main class="mx-auto text-center shadow shadow-lg rounded  col-8 col-md-5  border border-2 border-success  glo">
            <div>
                <h1>Welcome</h1>
             </div>
