--- a/src/app/files/view/view.component.html
+++ b/src/app/files/view/view.component.html
@@ -4,22 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <title>Document</title>
 </head>
-<body>
-    <section class="d-flex align-items-center justify-content-center my-5 py-2 mx-auto ">
-        <div class="bg-warning text-center ">
-            <h6 class="fs-5">Click to view budget details</h6>
-            </div>
-        <main *ngIf="gab.length > 0" class="col-10 bg-white shadow shadow-lg d-flex justify-content-around p-2 flex-wrap align-items-center">
-            <div *ngFor="let el of gab" class="d-flex justify-content-between flex-wrap align-items-center ">
-                <a clss="btn btn-primary" routerLink="/display/{{el._id}}">{{formatDate(el.dateCreated)}}</a>
-                
+<body >
+    <section class="d-flex align-items-center justify-content-center flex-column    mx-auto">
+        <div class="d-flex justify-content-between align-items-center bg-success-subtle mt-2 mb-4 text-light text-center p-2  w-100">
+            <h6 class="fs-5 bj">Budget details</h6>
+            <button routerLink="/create" class="btn btn-dark"><span class="material-symbols-outlined">
+                arrow_back
+                </span></button>
+        </div>
+        <main *ngIf="gab.length > 0" class="col-10 bg-white shadow-lg d-flex justify-content-around p-4 flex-wrap align-items-center">
+            <div *ngFor="let el of gab" class="d-flex justify-content-between align-items-center bg-danger w-100">
+                <div class="bg-warning my-2">
+                    <a class="btn btn-primary me-3 " routerLink="/display/{{el._id}}">{{formatDate(el.dateCreated)}}</a>
+                <button class="btn btn-outline-danger" (click)="deleteBudget(el._id)">
+                    <span class="material-symbols-outlined">delete</span>
+                </button>
+                </div><hr><br>
             </div>
         </main>
-        <main *ngIf="gab.length == 0">
-            <p>No budgets available.</p>
-          </main>
+        <main *ngIf="gab.length == 0" class="text-center mt-5">
+            <p>No budgets available. Please create a new budget to get started.</p>
+        </main>
     </section>
-</body>
+    </body>
 </html>
