--- a/src/app/files/create/create.component.css
+++ b/src/app/files/create/create.component.css
@@ -1,4 +1,87 @@
 
+
 body{
-    height: 45vh !important;
+    height: fit-content !important;
+    /* overflow: scroll; */
+    background: linear-gradient(rgb(0,0,0,0.5) ,rgb(0,0,0,0.5), rgb(0,0,0,0.5) ) ;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    /* background-image: url('https://avatars.mds.yandex.net/i?id=36b046e205e560ae9f93ab639a5534fc571d6604-5234139-images-thumbs&n=13'); */
+    background-image: url("https://images.unsplash.com/photo-1717851425482-bdb309381a84?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzMXx8fGVufDB8fHx8fA%3D%3D");
+    font-family: Arial, sans-serif;
+}
+
+main {
+    /* background-color: rgba(255, 255, 255, 0.9); */
+    /* backdrop-filter: blur(10px); */
+    padding: 2rem;
+    border-radius: 0.5rem;
+}
+
+h1, h2 {
+    font-size: 2rem;
+    margin-bottom: 0.5rem;
+}
+
+p, li {
+    font-size: 1rem;
+}
+
+form .form-control {
+    border-radius: 0.25rem;
+    padding: 1rem;
+    font-size: 1rem;
+}
+
+form .btn {
+    margin-top: 1.5rem;
+}
+
+.text-end .btn {
+    margin-bottom: 1rem;
+}
+
+.form-group {
+    margin-bottom: 1.5rem;
+}
+
+#dateError, #budgetError {
+    display: none;
+}
+
+form .form-control.is-invalid {
+    border-color: #dc3545;
+}
+
+form .form-control.is-invalid + .text-danger {
+    display: block;
+}
+
+section {
+    margin-top: 2rem;
+}
+
+section ul {
+    padding-left: 1rem;
+}
+
+section ul li {
+    margin-bottom: 1rem;
+    display: flex;
+    align-items: center;
+}
+
+section ul li i {
+    margin-right: 0.5rem;
+}
+
+blockquote {
+    font-size: 1rem;
+    font-style: italic;
+}
+
+blockquote-footer {
+    font-size: 0.875rem;
+    color: #6c757d;
 }
