--- a/src/app/files/displaybudget/displaybudget.component.css
+++ b/src/app/files/displaybudget/displaybudget.component.css
@@ -1,8 +1,14 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f8f9fa;
-  }
-  
+body{
+  height: fit-content !important;
+  /* overflow: scroll; */
+  background: linear-gradient(rgb(0,0,0,0.5) ,rgb(0,0,0,0.5), rgb(0,0,0,0.5) ) ;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  /* background-image: url('https://avatars.mds.yandex.net/i?id=36b046e205e560ae9f93ab639a5534fc571d6604-5234139-images-thumbs&n=13'); */
+  background-image: url("https://images.unsplash.com/photo-1717851425482-bdb309381a84?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzMXx8fGVufDB8fHx8fA%3D%3D");
+  font-family: Arial, sans-serif;
+}
   main {
     margin: 20px auto;
     max-width: 1200px;
@@ -61,7 +67,7 @@ body {
     border-collapse: collapse;
   }
   
-  .thead-dark th {
+  .thead th {
     background-color: #343a40;
     color: white;
     border: 1px solid #dee2e6;
@@ -109,5 +115,8 @@ body {
   
   .mb-0 {
     margin-bottom: 0;
+  }
+  .dam{
+    background-color: #e9f7ef !important;
   }
   
