--- a/src/app/files/home/home.component.css
+++ b/src/app/files/home/home.component.css
@@ -7,5 +7,60 @@
  
 }
 body{
-    height: 45vh !important;
+    height: fit-content !important;
+    /* overflow: scroll; */
+    background: linear-gradient(rgb(0,0,0,0.5) ,rgb(0,0,0,0.5), rgb(0,0,0,0.5) ) ;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    /* background-image: url('https://avatars.mds.yandex.net/i?id=36b046e205e560ae9f93ab639a5534fc571d6604-5234139-images-thumbs&n=13'); */
+    background-image: url("https://images.unsplash.com/photo-1717851425482-bdb309381a84?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzMXx8fGVufDB8fHx8fA%3D%3D");
+    font-family: Arial, sans-serif;
+}
+
+.hero-section {
+    background: url('https://example.com/your-background-image.jpg') no-repeat center center/cover;
+    color: black;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 0 20px;
+}
+.hero-section h1 {
+    font-size: 3.5rem;
+    margin-bottom: 20px;
+}
+.hero-section p {
+    font-size: 1.25rem;
+    margin-bottom: 30px;
+}
+.carousel-caption h5, .carousel-caption p {
+    color: black;
+}
+.testimonials {
+    /* background-color: #f8f9fa; */
+    padding: 50px 0;
+}
+.features {
+    padding: 50px 0;
+}
+.cta-section {
+    background-color: transparent;
+    /* color: white; */
+    padding: 50px 0;
+    text-align: center;
+}
+.try{
+    height: 70vh;
+}
+@media (max-width:750px) {
+    .hero-section{
+        height: 50vh;
+    }
+    .try{
+        height: max-content;
+    }
 }
