--- a/src/app/files/navbar/navbar.component.html
+++ b/src/app/files/navbar/navbar.component.html
@@ -6,9 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- app.component.html -->
 <header>
-    <nav class="navbar navbar-expand-lg navbar-light ">
+    <nav class="navbar navbar-expand-lg navbar-light px-3">
         <div class="container-fluid d-flex justify-content-between align-items-center">
             <a class="navbar-brand" href="#">Project Logo</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,24 +16,18 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link mx-3 " href="#">Home</a>
+                        <a class="nav-link mx-3 " routerLink="/Home"><i class="bi bi-house"></i>  <span class="px-1">Home</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mx-3" href="#">Create</a>
+                        <a class="nav-link mx-3" routerLink="/create"><i class="bi bi-plus"></i> <span class="px-1">Create</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mx-3" href="#">View</a>
+                        <a class="nav-link mx-3" routerLink="/view"><i class="bi bi-view-list"></i> <span class="px-1">View</span></a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-</header>
-<section>
-
-</section>
-<!-- app.component.html or the specific component HTML file -->
-
-  
+</header> 
 </body>
 </html>
