--- a/src/app/files/view/view.component.css
+++ b/src/app/files/view/view.component.css
@@ -1,11 +1,70 @@
 .bj{
-    border: 2px solid gray;
+    border: 2px solid black;
     background-color: black;
     border-radius: 10px;
 
     padding: 6px 8px;
-    margin-left: 30px;
+    /* margin: 20px; */
 }
+
 body{
-    height: 45vh !important;
+    height: fit-content !important;
+    /* overflow: scroll; */
+    background: linear-gradient(rgb(0,0,0,0.5) ,rgb(0,0,0,0.5), rgb(0,0,0,0.5) ) ;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    /* background-image: url('https://avatars.mds.yandex.net/i?id=36b046e205e560ae9f93ab639a5534fc571d6604-5234139-images-thumbs&n=13'); */
+    background-image: url("https://images.unsplash.com/photo-1717851425482-bdb309381a84?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzMXx8fGVufDB8fHx8fA%3D%3D");
+    font-family: Arial, sans-serif;
+}
+
+
+h2, h3 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+}
+
+p, li {
+    font-size: 1rem;
+}
+
+a.btn-primary {
+    font-size: 1rem;
+}
+
+button.btn-danger {
+    font-size: 1.5rem;
+}
+
+ul {
+    padding-left: 1rem;
+}
+
+ul li {
+    margin-bottom: 1rem;
+    display: flex;
+    align-items: center;
+}
+
+ul li i {
+    margin-right: 0.5rem;
+}
+
+.row div {
+    margin-bottom: 1rem;
+}
+
+blockquote {
+    font-size: 1rem;
+    font-style: italic;
+}
+
+blockquote-footer {
+    font-size: 0.875rem;
+    color: #6c757d;
+}
+
+.shadow-lg {
+    box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175);
 }
