--- a/src/app/files/footer/footer.component.html
+++ b/src/app/files/footer/footer.component.html
@@ -14,9 +14,9 @@
       <div class="row">
         <div class="col-md-4">
           <h5 class="fw-bold" >About Us</h5>
-          <div>
-             <img src="" alt="logo" srcset="">
-            <h6 class="fw-bold ">Budget Ease</h6>
+          <div class="d-block d-md-flex  align-items-center">
+             <img src="assets/logo.jpg" class="logs" alt="logo" srcset="">
+            <h6 class="fw-bolder mx-md-2 my-2 my-md-0 text-success">B<span class="text-dark">u</span>d<span class="text-dark">g</span>e<span class="text-dark">t</span> E<span class="text-dark">a</span>s<span class="text-dark">e</span></h6>
           </div>
           <p>We provide innovative budgeting solutions to help you manage your finances effortlessly and achieve your financial goals.</p>
         </div>
