--- a/src/app/files/home/home.component.html
+++ b/src/app/files/home/home.component.html
@@ -18,34 +18,28 @@
         <p>Manage your finances effortlessly and achieve your financial goals with our innovative budgeting solutions.</p>
         <a class="btn btn-success btn-lg" href="/create" role="button">Get Started</a>
     </section>
-
     <!-- Carousel Section -->
-    <section class="container-fluid mt-3 mt-md-5">
+    <section class="container-fluid mt-5">
         <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="https://paxforex.org/sites/default/files/zorans_ea_forex_accumulator.jpg" class="d-block w-100 try" alt="...">
-                   
+                    <img src="assets/shopping1.jpg" class="d-block w-100 try img-fluid" alt="...">
+                    
                 </div>
                 <div class="carousel-item">
-                    <img src="https://avatars.mds.yandex.net/i?id=c1fadfc7ea140427895e9de1d91049969c937706-4872002-images-thumbs&n=13" class="d-block w-100 try" alt="...">
-                  
+                    <img src="assets/shopping2.jpeg" class="d-block w-100 try" alt="...">
+                    
                 </div>
                 <div class="carousel-item">
-                    <img src="https://avatars.mds.yandex.net/i?id=9932414c9a3fa2365a6001d7428a9f7f6132d1b8-9152878-images-thumbs&n=13" class="d-block w-100 try" alt="...">
-                   
+                    <img src="assets/shopping3.jpg" class="d-block w-100 try" alt="...">
+                    
                 </div>
+               
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+           
         </div>
     </section>
+    
 
     <!-- Additional Content Section -->
     <section class="container mt-5">
