--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
 </head>
 <body >
  <div class="">
+  <!-- <img src="assets/logo.jpg" alt=""> -->
   <app-navbar></app-navbar>
   <router-outlet></router-outlet>
   <app-footer></app-footer>
