--- a/src/app/files/displaybudget/displaybudget.component.html
+++ b/src/app/files/displaybudget/displaybudget.component.html
@@ -8,9 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <section class="mx-auto border shadow shadow-lg p-2 border-1 border-success col-1- col-md-12  ">
+    <section class="mx-auto border shadow shadow-lg p-2 border-1 border-success col-1- col-md-12 goal ">
         <main class="d-flex justify-content-between align-items-center">
-            <div class="bg-light-subtle shadow shadow-lg rounded rounded-2 kol  p-2">
+            <div class="bg-light-subtle shadow shadow-lg rounded rounded-2  p-2">
                 <p class="fw-bold">Budget INFO : <span class="fw-light">{{budgetInfo.budgetName || budgetInfo.dateCreated}}</span></p>
                 <p class="fw-bold">Budget AMT : <span class="fw-light">#{{budgetInfo.budgetPrice}}</span></p>
                 <p class="fw-bold">Amt SPENT : <span class="fw-light">#{{totalSpent}}</span></p>
