--- a/src/app/files/create/create.component.html
+++ b/src/app/files/create/create.component.html
@@ -8,18 +8,22 @@
 </head>
 <body class="d-flex justify-content-center align-items-center  vh-100">
     <main class="col-12 col-md-6 col-lg-12 text-center shadow-lg border border-2 border-success py-4 px-2 mt-1 rounded-3 ">
-       
-        <div class="my-3">
+        
+        <div class="goal">
             <h1 class="text-success">Create Category</h1>
-            <p class="text-muted">Categorize your item for each day</p>
         </div>
-        <div>
-          <form [formGroup]="budgetForm" (ngSubmit)="onSubmit()" class="">
-            <div  class="form-group mb-3">
+        <main class="row">
+            <div class="col-12 col-md-6 d-none d-md-block">
+                <img src="assets/writing.webp" class="img-fluid" alt="" srcset="">
+            </div>
+            <div class="col-12 col-md-6 border border-success rounded rounded-1 py-2 ">
+                <p class="text-muted my-2">Categorize your item for each day</p>
+                <form [formGroup]="budgetForm" (ngSubmit)="onSubmit()" class="">
+                    <div  class="form-group mb-3">
               <input type="text" formControlName="name" placeholder="Budget Name" class="form-control">
               <div *ngIf="budgetForm.controls['name'].invalid && (budgetForm.controls['name'].dirty || budgetForm.controls['name'].touched)">
-                <div class="text-danger" *ngIf="budgetForm.controls['name'].errors?.['required']">Name is required.</div>
-            </div>
+                  <div class="text-danger" *ngIf="budgetForm.controls['name'].errors?.['required']">Name is required.</div>
+                </div>
             </div>
             <div class="form-group mb-3">
                 <input type="date" formControlName="date" name="date" placeholder="Select Date" class="form-control">
@@ -29,7 +33,7 @@
                 </div>
             </div>
             <div class="form-group mb-3">
-                <input type="text" formControlName="budget" name="budget" placeholder="Your item Budget e.g(N10000)" class="form-control">
+                <input type="text" formControlName="budget" name="budget" placeholder="Your Budget Amount e.g(N10000)" class="form-control">
                 <div *ngIf="budgetForm.controls['budget'].invalid && (budgetForm.controls['budget'].dirty || budgetForm.controls['budget'].touched)">
                     <div class="text-danger" *ngIf="budgetForm.controls['budget'].errors?.['required']">Budget is required.</div>
                     <div class="text-danger" *ngIf="budgetForm.controls['budget'].errors?.['pattern']">Only numbers are allowed.</div>
@@ -37,7 +41,9 @@
             </div>
             <button type="submit" class="btn btn-success btn-lg w-100" [disabled]="budgetForm.invalid">Create Category</button>
         </form>
-        </div>
+    </div>
+   
+</main>
         <hr class="my-5">
         <section class="mt-5">
             <h2 class="text-success">Budgeting Tips</h2>
