--- a/src/app/files/view/view.component.css
+++ b/src/app/files/view/view.component.css
@@ -24,7 +24,10 @@ h2, h3 {
     font-size: 2rem;
     margin-bottom: 1rem;
 }
-
+.ffo{
+    margin-top: 100px;
+    background-color: rgba(255, 255, 255, 0.45);
+}
 p, li {
     font-size: 1rem;
 }
