--- a/src/app/files/view/view.component.html
+++ b/src/app/files/view/view.component.html
@@ -12,8 +12,8 @@
       
 
         <!-- Budgets List Section -->
-        <main *ngIf="gab.length > 0" class="col-10 col-md-8 col-lg-6 shadow-lg p-3 mb-5 bg-white rounded mt-4">
-            <h6 class="text-center fw-bold text-decoration-underline p-2">Budget Overview </h6>
+        <main *ngIf="gab.length > 0" class="col-10 col-md-8 col-lg-6 shadow-lg p-3 mb-5  rounded ffo">
+            <h6 class="text-center fw-bold text-decoration-underline p-2 ">Budget Overview </h6>
             <p class="text-center">Click on the budget name or date to view your Carts 🛒</p>
             <div *ngFor="let el of gab" class="my-3">
                 <div class="shadow-sm border border-2 border-success-subtle p-3 d-flex justify-content-between align-items-center rounded">
