i guess am done for now

--- a/src/app/files/view/view.component.css
+++ b/src/app/files/view/view.component.css
@@ -28,6 +28,9 @@ h2, h3 {
     margin-top: 100px;
     background-color: rgba(255, 255, 255, 0.45);
 }
+.ben{
+    margin-top: 150px;
+}
 p, li {
     font-size: 1rem;
 }
