--- a/src/app/files/view/view.component.html
+++ b/src/app/files/view/view.component.html
@@ -26,7 +26,7 @@
         </main>
 
         <!-- No Budgets Available Section -->
-        <main *ngIf="gab.length == 0" class="text-center ff0">
+        <main *ngIf="gab.length == 0" class="text-center ben">
             <p class="fs-5 text-muted">No budgets available. Please create a new budget to get started.</p>
         </main>
 
