--- a/src/app/files/create/create.component.html
+++ b/src/app/files/create/create.component.html
@@ -39,7 +39,18 @@
                     <div class="text-danger" *ngIf="budgetForm.controls['budget'].errors?.['pattern']">Only numbers are allowed.</div>
                 </div>
             </div>
-            <button type="submit" class="btn btn-success btn-lg w-100" [disabled]="budgetForm.invalid">Create Category</button>
+            <button *ngIf="!isLoading" type="submit" class="btn btn-success btn-lg w-100" [disabled]="budgetForm.invalid ">Create Category</button>
+            <button *ngIf="isLoading" class="btn btn-success btn-lg w-100 d-flex justify-content-center " disabled >
+                <div class="dot-spinner ">
+                <div class="dot-spinner__dot"></div>
+                <div class="dot-spinner__dot"></div>
+                <div class="dot-spinner__dot"></div>
+                <div class="dot-spinner__dot"></div>
+                <div class="dot-spinner__dot"></div>
+                <div class="dot-spinner__dot"></div>
+                <div class="dot-spinner__dot"></div>
+                <div class="dot-spinner__dot"></div>
+            </div></button>
         </form>
     </div>
    
