--- a/src/app/files/home/home.component.html
+++ b/src/app/files/home/home.component.html
@@ -21,7 +21,7 @@
     <!-- Carousel Section -->
     <section class="container-fluid mt-5">
         <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
+            <div class="carousel-inner my-2">
                 <div class="carousel-item active">
                     <img src="assets/shopping1.jpg" class="d-block w-100 try img-fluid" alt="...">
                     
