--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="shortcut icon" href="assets/logo.jpg" type="image/x-icon">
+  <title>Budget-Ease</title>
 </head>
 <body >
  <div class="">
-  <!-- <img src="assets/logo.jpg" alt=""> -->
   <app-navbar></app-navbar>
   <router-outlet></router-outlet>
   <app-footer></app-footer>
